Fix overflow-x to hidden

--- a/assets/scss/devices.scss
+++ b/assets/scss/devices.scss
@@ -18,12 +18,13 @@
 		box-shadow: 0 0 0 3px #111;
 		overflow: hidden; // hide from screen scroll
 		.scroll {
-			overflow: scroll;      //Scrollable
+			overflow-y: auto;      //Scrollable
+			overflow-x: hidden;
 			max-height: 100%;
 			margin-right: -100px;  //
 			padding-right: 100px;  // Hide scroll-y
-			margin-bottom: -100px; //
-			padding-bottom: 100px; // Hide scroll-x
+			// margin-bottom: -100px; //
+			// padding-bottom: 100px; // Hide scroll-x
 		}
 	}
 
